# agent-team

./: .gitignore  CLAUDE.md  README.md
Docs/: roadmap.md  setup-voice-chatbot.md
backend/: chat_history.py  dependencies.py  main.py  requirements.txt
backend/data/: calendar.json  chat_history.jsonl
backend/routers/: calendar_agent.py  chat.py  email_agent.py  intent_classifier.py  synthesize.py  transcribe.py  wakeword.py  weather_agent.py  web_search.py  youtube_agent.py
data/: clients.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/electron/: main.js  preload.js
frontend/src/: App.css  App.jsx  api.js  audioUtils.js
frontend/src/components/: ChatLog.jsx  EmailDraftModal.jsx  RecordButton.jsx
frontend/src/hooks/: useWakeWord.js
scripts/: start-backend.sh
voice-chatbot/: config.yaml  conftest.py  debug_tts.py  main.py  pyproject.toml  requirements.txt  run.sh  setup_local.sh  smoke_test.py
voice-chatbot/src/audio/: __init__.py  player.py  recorder.py
voice-chatbot/src/config/: settings.py
voice-chatbot/src/llm/: client.py
voice-chatbot/src/pipeline/: __init__.py  voice_pipeline.py
voice-chatbot/src/stt/: transcriber.py
voice-chatbot/src/tts/: __init__.py  synthesizer.py
voice-chatbot/tests/: test_llm.py  test_pipeline.py  test_stt.py  test_tts.py
